--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <meta charset="utf-8">
 <html>
 	<head>
-   		<h1 id = "year"> Current Year: 1993 </h1>
-	   	<h2> 
-	   		<button id = "button" type= "button" name= "update_button" onclick= "update_data()">
-				Jump forward 5 years
-			</button>
-		</h2>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
+		<h1 id = "container">
+	   		<year id = "year"> Current Year: 1988 </year>
+		   	<button id = "button" type= "button" name= "update_button" onclick= "update_data()"> Jump forward 5 years </button>
+			<legend id = "legend">
+				<yr1> </yr1>
+				<yr2> </yr2>
+				<yr3> </yr3>
+				<yr4> </yr4>
+				<yr5> </yr5>
+			</legend>
+		</h1>
 	</head>
 
 	<script src="https://d3js.org/d3.v5.min.js"></script>
-	<script src="fisheye.js" charset="utf-8"></script>
 
 	<body>
-
  		<script src="slideshow.js" type="text/javascript"></script>
-
 	</body>
 </html>
